--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,19 @@
 APP_ENV=dev
 APP_SECRET=00c73f71c932492dd48a6700eb35a9da
 
+POSTGRES_DATABASE=metric_loc
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 DATABASE_URL=pgsql://postgres:postgres@postgres:5432/metric_loc
+
+CONTROLLER_METRICS_ENABLED=true
+METRIC_REDIS_PREFIX=PROMETHEUS_
+REDIS_DSN=redis://redis
+
+APP_CGI_SERVER_HOST=php-fpm
+APP_CGI_SERVER_PORT=9000
+
+###> snc/redis-bundle ###
+# passwords that contain special characters (@, %, :, +) must be urlencoded
+REDIS_URL=redis://localhost
+###< snc/redis-bundle ###
