--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,17 @@
         "php": "^7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-redis": "*",
+        "predis/predis": "^1.1.1",
+        "snc/redis-bundle": "^3.2",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
-        "symfony/flex": "^1.3.1",
+        "symfony/flex": "^1.6.1",
         "symfony/framework-bundle": "4.4.*",
+        "symfony/monolog-bundle": "^3.5",
+        "symfony/orm-pack": "^1.0",
         "symfony/yaml": "4.4.*",
-        "symfony/orm-pack": "^1.0"
+        "tweedegolf/prometheus-bundle": "^0.3.0"
     },
     "require-dev": {
     },
