--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -2,14 +2,20 @@ FROM php:7.4-fpm
 
 RUN apt-get update
 
-RUN apt-get install -y zlib1g-dev libpq-dev git libicu-dev libxml2-dev libzip-dev\
+RUN apt-get install -y zlib1g-dev libpq-dev git libicu-dev libxml2-dev libzip-dev \
+    && pecl install -o -f redis \
+    && rm -rf /tmp/pear \
     && docker-php-ext-configure intl \
+    && docker-php-ext-enable redis \
     && docker-php-ext-install intl \
     && docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql \
     && docker-php-ext-install pdo pdo_pgsql pgsql \
     && docker-php-ext-install zip xml
 
+
 RUN curl --insecure https://getcomposer.org/composer.phar -o /usr/bin/composer && chmod +x /usr/bin/composer
+
+COPY ./ /var/www/project
 
 # Set timezone
 RUN rm /etc/localtime
